<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/dashboard" />
</group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_baseline_account_box_24"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/about_us" />
            </group>
        </menu>
    </item>
</menu>